fix: cookie z-index and intial value storage

--- a/packages/webapp/components/CookieBanner.module.css
+++ b/packages/webapp/components/CookieBanner.module.css
@@ -1,4 +1,5 @@
 .cookieBanner {
+  z-index: 20;
   @screen laptop {
     left: unset
   }
